<resources>
    <string name="welcome">Welcome to  flexispot</string>
    <string name="all_devices">All Devices</string>
    <string name="not_support_device">Not support for BLE Bluetooth device, the function is unavailable.</string>
    <string name="open_bluetooth">Turn on bluetooth</string>
    <string name="bluetooth_is_open">Bluetooth has been turned on</string>
    <string name="touch_search_device">Bluetooth has been turned on|Click here to discover device </string>
    <string name="bluetooth_is_close">Bluetooth has been turned off</string>
    <string name="must_open_bluetooth">Bluetooth must be turned on to use this application, agree to turn on ?</string>
    <string name="please_open_bluetooth">Bluetooth can’t be turned on by the application, please turn on it manually</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="agree">Agree</string>
    <string name="warring">Warning</string>
    <string name="erro">Error</string>
    <string name="refuse">Refuse</string>
    <string name="complete">Complete</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="del_device">Are you sure to delete the device?</string>
    <string name="exit_app">Click again to exit program</string>
    <string name="not_can_use_app">The application can’t be normally used as you refused the permission</string>
    <string name="thank_you"> You refused to turn on the bluetooth,thank you for using </string>
    <string name="unkown_error">Unknown error, please try again</string>
    <string name="device_not_found">Not found available device</string>
    <string name="searching">...Searching</string>
    <string name="mill">TreadMill</string>
    <string name="app_name">Flexispot</string>
    <string name="my_device">My Device</string>`
    <string name="add_intellegent_device">Add Intelligent Device</string>
    <string name="add_device">Add Device</string>
    <string name="device_around">Searching New Device</string>
    <string name="desk">Standing Desk</string>
    <string name="media">Collaborative Media Wall</string>
    <string name="rack">TV Lifting System</string>
    <string name="connected">Connected Successfully</string>
    <string name="device_name">Device Name</string>
    <string name="hint_device_name">Please input the bluetooth name</string>
    <string name="nearby">Nearby Bluetooth devices</string>
    <string name="tips">Simplify the product name to make it easier for hint and voice actions  </string>
    <string name="tips_two">Please Simplify the product name for prompt and voice operation</string>
    <string name="experience">Start experience</string>
    <string name="input_sth">Please input the required content</string>
    <string name="height">Height</string>
    <string name="media_height">Collaborative media wall’s height</string>
    <string name="stand">Standing Height</string>
    <string name="sit">Sitting Height</string>
    <string name="device_detail">Device Details</string>
    <string name="stand_height">Standing Height</string>
    <string name="sit_height">Sitting Height</string>
    <string name="take_back">Withdraw</string>
    <string name="connect_time_out">Connection timeout, please check whether the device is available or occupied</string>
    <string name="connect_device"> Connecting the Device</string>
    <string name="connect_device_two"> Connect the device</string>
    <string name="tips_setting_down">Please long press the button to set the current position as your memory sitting height</string>
    <string name="tips_setting_stand">Please long press the button to set the current position as your memory standing height</string>
    <string name="setting_down_success">Set the current position as the memory sitting height successfully</string>
    <string name="setting_stand_success">Set the current position as the memory standing height successfully</string>
    <string name="tips_setting_up">Please long press the button to set the current position as your memory standing height</string>
    <string name="setting_up_success">Set the current position as the memory standing height successfully</string>
    <string name="device_offilne">The device is offline</string>
    <string name="dis_connect_device"> Disconnected, please connect the device again</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="sure_delete">Confirm delete?</string>
    <string name="submut">Confirm</string>
    <string name="rename_title">Rename the device name</string>
    <string name="rotate_height">Collaborative Desk Height</string>
    <string name="rotate_angle">Collaborative Desk Angle</string>
    <string name="angle">Angle</string>
    <string name="rotate_desk">Rotate the collaborative desk</string>
    <string name="e01">Continuous running  time is too long</string>
    <string name="e02">Over-temperature</string>
    <string name="e03">Motor 1 Overcurrent</string>
    <string name="e04">Motor 2 Overcurrent</string>
    <string name="e07">Motor 1 Single hall error</string>
    <string name="e08">Motor 2 Single hall error</string>
    <string name="e09">Unbalanced desktop error</string>
    <string name="e20">Motor 1 Two halls error</string>
    <string name="e21">Motor 2 Two halls error</string>
    <string name="e22">Motor 1 Power and hall error</string>
    <string name="e23">Motor 2 Power and hall error</string>
    <string name="e30">Sensor Error</string>
    <string name="ex">Device Error</string>
    <string name="end_search">Searching Completed</string>
    <string name="highest">Collaborative desk has reached Max. Height, unable to lift any more</string>
    <string name="lowest">Collaborative desk has reached Min. Height, unable to descend any more</string>
    <string name="select_all">Select All</string>
    <string name="selected"> </string>
    <string name="amoount"> </string>
    <string name="content_error">Code Error</string>
    <string name="camera">Camera</string>
    <string name="not_can_use_function">The function can’t be normally used as you refused the permission</string>
    <string name="restore">Reset</string>
    <string name="height1">Height 1</string>
    <string name="height2">Height 2</string>
    <string name="refreshing">Searching</string>
    <string name="sure_reset">You are about to reset...</string>
    <string name="reset_failed">Reset failed, please try again</string>
    <string name="remind">Remind</string>
    <string name="ope_later">Continuous operation time is too long，use it after 18 minutes</string>
    <string name="ope_later_temp">Over-temperature，use it after 18 minutes</string>
    <string name="auto_fixed">The exception has been fixed automatically and can continue to run</string>
    <string name="device_error">Device Error</string>
    <string name="to_lowest">descend to the lowest height for reset</string>
    <string name="new_speed">current speed </string>
    <string name="rice"> rice </string>
    <string name="step_number"> step </string>
    <string name="cal"> cal </string>
    <string name="now_speed"> current speed: 0 km / h</string>
    <string name="automatic"> automatic mode </string>
    <string name="manual"> manual mode</string>
    <string name="preset_speed"> preset speed </string>
    <string name="set_time"> standby time setting</string>
    <string name="novice_guide"> novice guide </string>
    <string name="set_speed"> set speed</string>
    <string name="start"> Start </string>
    <string name="end"> End </string>
    <string name="manual_two">manual mode </string>
    <string name="automatic_two">  automatic mode</string>
    <string name="thread_remind">  Please keep 3km / h on the walking machine</string>
    <string name="already_walked">  already walked </string>
    <string name="walking_thread">  walking machine on walking station</string>
    <string name="qidong">    Press "function key" of remote control to start </string>
    <string name="target">    target 30s</string>
    <string name="press">    Press the mode key to switch to automatic mode</string>
    <string name="get_into">   Enter the marking area of walking machine</string>
    <string name="next">   next</string>
    <string name="control_thread">   Please control the walking machine to</string>
    <string name="complete_thread">   Congratulations on completing the novice guide</string>
    <string name="complete_end">   complete</string>
    <string name="is_nolong">   There is no long press mode in the current mode</string>
    <string name="is_long">   The current mode has long press mode</string>
    <string name="must_open_Location">Use this app to open location in the background. Use this app to open location in the background for Bluetooth connection. Do you agree to open the location</string>
    <string name="must_open_Location2">You need to use location permission for Bluetooth connection in the background to use this application. Do you agree</string>
    <string name="thank_you_Location"> You refused to open the location. The app may not work properly</string>
    <string name="thank_you_Location2"> If you refuse to pass the location permission, the application may not work properly</string>
    <string name="deviceremind"> remind</string>


    <string name="metric_system">   Metric system</string>
    <string name="british_system">British system</string>
    <string name="mile">mile</string>
    <string name="menu_scan">scan</string>
    <string name="menu_stop">stop</string>
    <string name="menu_connect">connect</string>
    <string name="menu_disconnect">disconnect</string>

    <string name="state_connected">connected</string>
    <string name="state_connecting">connecting</string>
    <string name="state_disconnected">disconnected</string>

    <string name="listen_enable">Listen for notifications</string>
    <string name="listen_disable">Stop listen</string>

    <string name="open">Open</string>
    <string name="kcal"> Kcal </string>
    <string name="set_up">Setting</string>
    <string name="wancheng"> Complete </string>
    <string name="dis_connect_service"> Connection timeout, the service did not find it</string>
    <string name="initialization">Factory data reset</string>
    <string name="one_moment_please">Wait a moment...</string>
    <string name="unit_preferences">Unit preferences</string>
    <string name="treadmill_reset">The hardware information will be reset!</string>
    <string name="thread_lock">The walkers are unlocked! Do you want to re-enter the novice boot mode?</string>
    <string name="thread_unlock">Enter novice mode?</string>
    <string name="thread_xinshou">Complete novice guidance, remove speed limit</string>
    <string name="explain">Directions for use</string>
    <string name="km">km</string>
    <string name="kmh">km/h</string>
    <string name="mph">mph</string>
    <string name="privacy">Privacy Policy</string>
    <string name="privacy_content_one">Welcome to the flexispot APP, you can use this Application and realization of the connection and interaction of walking machine equipment functions used. We will strictly abide by relevant laws and regulations. And privacy policy to protect your personal information. \n Please read and choose:</string>
    <string name="privacy_content_two">《flexispot Privacy Agreement》</string>
    <string name="privacy_content_three">Selecting "Agree and Continue" below means you agree to the above agreement content.</string>
    <string name="privacy_content_agree">Agree and continue</string>
    <string name="privacy_content_disagree">Disagree and exit</string>
    <string name="privacy_content_terms">Declaration and terms</string>
    <string name="thread_remind_yin">  Please keep 1.8 mile/h on the walking machine</string>
</resources>
