<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item_around">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/privacy_content_terms"
            android:textColor="#ff333333"
            android:gravity="center"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/tv_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/privacy_content_one"
            android:textColor="#ff131415"
            android:textSize="13sp" />
        <TextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_content_two"
            android:textColor="#ff2978ff"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            ></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_content_three"
            android:textColor="#ff131415"
            android:textSize="13sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#4D4D4D"
        android:layout_marginTop="30dp"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_not_accept"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/privacy_content_disagree"
            android:textColor="#666666"
            android:textSize="14sp" />
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#4D4D4D"></View>
        <TextView
            android:id="@+id/rl_accept"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/privacy_content_agree"
            android:textColor="#ff2978ff"
            android:textSize="14sp" />



    </LinearLayout>




</LinearLayout>