<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_item_around"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="185dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:textStyle="bold"
        android:text="@string/treadmill_reset"
        android:textSize="15sp"
        android:textColor="#333333"
        android:gravity="center"
        />

    <View
        android:id="@+id/v_split0"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#999999"
            android:textSize="17sp"
            android:text="@string/cancel"
           />
        <View
            android:id="@+id/v_split1"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/split"
        />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#017AFF"
            android:textSize="17sp"
            android:text="@string/submut"
            />
    </LinearLayout>






</LinearLayout>