<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_item_around"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:layout_height="172dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/rename_title"
        android:textSize="15sp"
        android:textColor="#333333"
        android:layout_marginTop="21.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.flexispot.ble.gui.view.NoCacheEditText
        android:id="@+id/et_name"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:textSize="14sp"
        android:textColor="#333333"
        android:textColorHint="@android:color/darker_gray"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:maxLines="1"
        android:maxLength="15"
        android:hint="@string/hint_device_name"
        android:background="@drawable/bg_rename_input"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <View
        android:id="@+id/v_split0"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="24.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:background="@color/split" />

    <View
        android:id="@+id/v_split1"
        android:layout_width="0.5dp"
        android:layout_height="0dp"
        android:background="@color/split"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_split0"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="#999999"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/v_split0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/v_split1" />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="#017AFF"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/v_split0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/v_split1" />

</androidx.constraintlayout.widget.ConstraintLayout>