<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@mipmap/ic_back">

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/novice_guide"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_two"
        android:textColor="#ff999999"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/toolbar"
        />
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text"
       android:layout_marginBottom="173dp"

        />




<LinearLayout
    android:id="@+id/viewGroup"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="100dp"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    >

</LinearLayout>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#36A0EE"
        android:text="@string/start"
        android:textSize="17sp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/bg_tread"
        />

</RelativeLayout>
